<resources>
    <string name="app_name">BharatYuvaSangh2017</string>
    <string name="add_post">Add post</string>
    <string name="settings">Settings</string>
    <string name="post_title">Post Title</string>
    <string name="post_description">Post Description</string>
    <string name="submit_post">Submit Post</string>
    <string name="mydescription">mydescription</string>
    <string name="post_title_goes_here">Post Title goes here</string>
    <string name="post_description_goes_here">Post Description goes here</string>
    <string name="your_name">Your Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signup">SignUp</string>
    <string name="logout">Logout</string>
    <string name="enter_your_display_name">Enter your Display Name</string>
    <string name="finish_setup">Finish Setup</string>
    <string name="login">Login</string>
    <string name="passwlord">Password</string>
    <string name="need_a_new_account">need a new account</string>
    <string name="username">UserName</string>
    <string name="user_descriptin">user descriptin</string>
    <string name="blog_title">Blog TItle</string>
    <string name="blog_description_goes_here">Blog Description goes here</string>
    <string name="emails">Email</string>
    <string name="welcome_to_bys">WElcome to BYS</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="create">Create_a_New_Account</string>
    <string name="w_account">Create a New Account</string>
    <string name="welcome_to_bysa">Welcome to Bys</string>
    <string name="remove_post">Remove Post</string>
    <string name="no_account_yet_create_here">No account yet?Create Here</string>
    <string name="image">image</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="action_settings">Settings</string>
    <string name="about_bys">About BYS</string>
    <string name="profile">Profile</string>
    <string name="my_posts">My Posts</string>
    <string name="settingss">Settings</string>
    <string name="bys">BYS</string>
    <string name="create_new_account"><u>create new account</u></string>
    <string name="posted_by">Posted by</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="sac">SAC</string>
    <string name="signupbtn">SIGNUP</string>
    <string name="reset_password">Reset Password</string>
    <string name="email_address">Email Address</string>
    <string name="postby">posted by:</string>
    <string name="plese_enter_your_register_email_id_to_reset_your_password">Plese enter your register Email Id to reset your password</string>
    <string name="my_startup_is_a_app_where_you_can_share_your_idea_and_get_a_team_to_start_your_own_startup_my_startup_motivates_you_through_your_friends_innovative_ideas_here_we_will_let_you_know_what_s_going_on_in_this_startup_world">My Startup is a app where you can share your idea and get a team to start your own startup. My Startup motivates you through your friends innovative ideas. here we will let you know what\'s going on in this startup world...</string>
    <string name="startups_near_by_you">Startups near By you</string>
    <string name="welcome_to">Welcome to</string>
    <string name="mystartupnews_blogspot_com">Mystartupnews.blogspot.com</string>
    <string name="about_my_startup">About My Startup</string>
    <string name="my_startup">My Startup</string>
    <string name="startup_ideas">StartUp ideas</string>
    <string name="textview">Textview</string>
    <string name="my_startup_news">My StartUp News</string>
    <string name="post_your_idea"><![CDATA[Post Your Idea->]]></string>
</resources>

