<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <item android:title="@string/my_startup">
        <menu>

            <item
                android:id="@+id/nav_Bys"
                android:icon="@mipmap/ic_about"
                android:title="@string/about_my_startup" />



            <item
                android:id="@+id/nav_Startupnews"
                android:icon="@drawable/ic_content_paste_white_24dp"
                android:title="@string/my_startup_news" />


            <item
                android:id="@+id/nav_Logout"
                android:title="@string/logout"
                android:icon="@drawable/logout"

                />

        </menu>

    </item>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_Review"
                android:icon="@drawable/ic_content_paste_white_24dp"
                android:title="Review" />


        </menu>
    </item>


</menu>