<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.simplesite.komalauthor.bharatyuvasangh2017.BlogSingleActivity">

    <ImageView
        android:id="@+id/singleBlogimage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/user_descriptin"
        android:scaleType="centerCrop"
        android:src="@mipmap/add_btn"
        tools:scaleType="centerCrop" />

    <TextView
        android:id="@+id/singleBlogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/singleBlogimage"
        android:layout_below="@+id/singleBlogimage"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:text="@string/blog_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/singleBlogDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/singleBlogTitle"
        android:layout_below="@+id/singleBlogTitle"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="13dp"
        android:padding="15dp"
        android:paddingBottom="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/blog_description_goes_here"
        android:textSize="16sp" />

    <Button
        android:id="@+id/singleRemoveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/remove_post"
        android:visibility="invisible" />


</RelativeLayout>
