<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainlogo"

    tools:context="com.simplesite.komalauthor.bharatyuvasangh2017.RegisterActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/appBarLayout">

        <android.support.v7.widget.Toolbar
            android:id="@+id/register_toolbar"
            android:layout_width="match_parent"
            android:background="@drawable/mainlogo"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <EditText
        android:id="@+id/nameField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/emailField"
        android:layout_below="@+id/textView2"
        android:drawableRight="@drawable/name"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="60dp"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:background="@drawable/border_output"
        android:ems="10"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:padding="15dp" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/nameField"
        android:textColorHint="#fff"
        android:textColor="#fff"
        android:drawableRight="@drawable/ic_mail_outline_white_24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_output"
        android:padding="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/emailField"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:drawableRight="@drawable/ic_lock_outline_white_24dp"
        android:background="@drawable/border_output"
        android:ems="10"
        android:textColor="#fff"

        android:textColorHint="#fff"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="32dp"
        android:background="@drawable/border_output"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/create_account"
        android:textColor="#fff"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:text="@string/w_account"
        android:textColor="#fff"
        android:textSize="23sp"
        android:textStyle="italic"
        android:layout_below="@+id/appBarLayout"
        android:layout_alignStart="@+id/nameField" />
</RelativeLayout>
