<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainlogo"

    tools:context="com.simplesite.komalauthor.bharatyuvasangh2017.LoginActivity">



    <ImageView
    android:layout_width="150dp"
    android:layout_height="150dp"
    android:background="@mipmap/ic_launcher"
    android:layout_marginTop="14dp"
    android:layout_below="@+id/appBarLayout"
    android:layout_centerHorizontal="true"
    android:id="@+id/imageView2" />
    <EditText
        android:id="@+id/loginEmailField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:textColor="#fff"
        android:background="@drawable/border_output"
        android:textColorHint="#fff"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/emails"
        android:textCursorDrawable="@drawable/color_cursor"
        android:drawableRight="@drawable/ic_mail_outline_white_24dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginPasswordField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/loginEmailField"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="13dp"
        android:textColor="#fff"

        android:textCursorDrawable="@drawable/color_cursor"
        android:textColorHint="#fff"
        android:drawableRight="@drawable/ic_lock_outline_white_24dp"
        android:background="@drawable/border_output"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/passwlord"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginPasswordField"

        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_toStartOf="@+id/textView4"
        android:background="@drawable/border_output"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <Button
        android:id="@+id/signupBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/loginBtn"
        android:layout_alignBottom="@+id/loginBtn"
        android:layout_marginEnd="20dp"

        android:layout_marginTop="55dp"

        android:layout_toEndOf="@+id/textView4"
        android:background="@drawable/border_output"
        android:text="@string/signupbtn"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="My StartUp"
        android:textColor="#fff"
        android:textSize="30sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <TextView
        android:id="@+id/forgotpswdLoginTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView2"
        android:layout_marginBottom="35dp"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="20sp" />


</RelativeLayout>
