<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/activity_forgot_password"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@drawable/mainlogo"
tools:context="com.simplesite.komalauthor.bharatyuvasangh2017.ForgotPasswordActivity">


<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_alignParentBottom="true"
    android:layout_alignParentStart="true">


    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="FORGOT PASSWORD ?"
        android:textColor="#FFF"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/plese_enter_your_register_email_id_to_reset_your_password"
        android:textColor="@android:color/white"
        android:textSize="17dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        >

        <EditText
            android:id="@+id/ForgotEmailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:textColorHint="#fff"
            android:layout_marginLeft="15dp"
            android:drawableRight="@drawable/ic_mail_outline_white_24dp"
            android:background="@drawable/border_output"
            android:letterSpacing="0.1"

            android:textSize="16dp"
            android:textColor="#fff"
            android:inputType="textEmailAddress"
            />
    </LinearLayout>
</LinearLayout>
<!-- Login Button -->

<Button
    android:id="@+id/ResetPswdForogtBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/reset_password"
    android:textColor="#fff"
    android:background="@drawable/border_output"
    android:padding="15dp"
    android:layout_weight="1"
    android:gravity="center"
    android:layout_marginLeft="10dp"
    android:textStyle="bold"
    android:layout_alignParentBottom="true"
    android:layout_marginRight="15dp"
    android:layout_marginBottom="10dp"
    />




</RelativeLayout>